--- a/index.html
+++ b/index.html
@@ -288,7 +288,14 @@
                                 
                                 const date = new Date(finalTimestamp);
                                 if (!isNaN(date.getTime())) {
-                                    const formattedTime = date.toLocaleString('zh-CN');
+                                    // 使用UTC时间格式
+                                    const year = date.getUTCFullYear();
+                                    const month = date.getUTCMonth() + 1;
+                                    const day = date.getUTCDate();
+                                    const hours = date.getUTCHours().toString().padStart(2, '0');
+                                    const minutes = date.getUTCMinutes().toString().padStart(2, '0');
+                                    const seconds = date.getUTCSeconds().toString().padStart(2, '0');
+                                    const formattedTime = `${year}/${month}/${day} ${hours}:${minutes}:${seconds} (UTC)`;
                                     timeElement.textContent = `预计恢复时间：${formattedTime}`;
                                     
                                     // 检查预计时间是否小于当前时间
